--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,13 @@ matplotlib = "^3.5.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 88
+target-version = ['py38']
+extend-exclude = '''
+^/tests|
+^/website|
+^/rosette-packages|
+^/crdt_tests
+'''
